[package]
name = "serde_log"
version = "0.1.0"
authors = ["William Turner <willtur.will@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/willtrnr/serde-log"
license = "MIT"
keywords = ["serde"]
categories = ["development-tools::debugging", "encodings"]

[lib]
name = "serde_log"

[dependencies]
log = "0.4"
serde = "1.0"
